# docker-blueprint

./: .dockerignore  .gitignore  README.md  docker-compose.yml  noxfile.py  pyproject.toml
tests/: test_fact.py
views/fast_api/: api.dockerfile  fastapi_app.py
views/flask/: app.py  web.dockerfile
views/flask/static/: style.css
views/flask/templates/: index.html
views/nginx/: default.conf  get_cert.sh  nginx.dockerfile
views/nginx/certs/: README.md
